docs: Revise evidence-based care content for clarity and consistency across multiple languages
- Updated descriptions and titles in English, Spanish, Portuguese, and Brazilian Portuguese to enhance clarity regarding telehealth services and the role of independent licensed professionals.
- Added a quick summary section for consumers to highlight key benefits of telehealth.
- Ensured consistent messaging across all language versions to reflect Eleva.care's commitment to evidence-based practices and patient safety.

--- a/src/content/evidence-based-care/en.mdx
+++ b/src/content/evidence-based-care/en.mdx
@@ -27,7 +27,7 @@ import { Separator } from '@/components/ui/separator';
   badge="Clinical Excellence"
   title="Evidence-based care,"
   subtitle="proven by science"
-  description="Telehealth for women's health: safe, effective, faster, and more private. Trusted clinical care from home—tested in tens of thousands of patients and summarized in large systematic reviews."
+  description="Telehealth for women's health: safe, effective, faster, and more private. Independent, licensed experts deliver care through our digital health platform—backed by tens of thousands of patients in published research."
   ctaPrimary={{
     text: 'Book a Consultation',
     href: '/experts',
@@ -38,9 +38,20 @@ import { Separator } from '@/components/ui/separator';
   }}
 />
 
+{/* Quick Summary for Consumers */}
+
+<TextBlock className="bg-muted/50 rounded-xl p-6 mb-12">
+**What this means for you:**
+
+- **Telehealth works** — Research shows video consultations are as effective as in‑person visits for many women's health needs.
+- **You're in good hands** — Independent, licensed healthcare professionals deliver your care; Eleva.care provides the secure platform.
+- **Your safety comes first** — Experts will recommend in‑person care whenever it's clinically needed.
+- **Privacy guaranteed** — All consultations happen on an encrypted, GDPR‑compliant platform.
+  </TextBlock>
+
 <KeyNumbersSection
   title="Clinical Evidence That Matters"
-  subtitle="Our commitment to evidence-based care is backed by rigorous research and validated in real-world settings"
+  subtitle="Evidence-based care is backed by rigorous research and validated in real-world settings"
   stats={[
     {
       icon: 'award',
@@ -72,19 +83,20 @@ import { Separator } from '@/components/ui/separator';
 <HeadlineSection
   id="how-we-use-evidence"
   label="Our Approach"
-  title="How Eleva Care uses evidence-based medicine"
-  description="We integrate the latest research into every aspect of care, ensuring that telehealth services are safe, effective, and patient-centered."
+  title="How Eleva.care supports evidence-based medicine"
+  description="The platform facilitates access to telehealth services aligned with international clinical guidelines and peer‑reviewed research. Independent experts maintain full clinical autonomy over patient care."
 />
 
 <TextBlock>
-  At Eleva Care, evidence-based medicine isn't just a buzzword—it's the foundation of everything we
-  do. Every service we offer is grounded in peer-reviewed research and clinical guidelines.
+  At Eleva.care, we believe every woman deserves access to the best available science. That's why
+  our platform supports evidence‑based practices aligned with international guidelines and
+  peer‑reviewed research.
 </TextBlock>
 
 <TextBlock>
-  We continuously monitor the latest scientific literature to ensure our protocols reflect current
-  best practices. Our clinical team reviews new evidence as it emerges and updates our care pathways
-  accordingly.
+  Independent, licensed healthcare professionals on Eleva.care maintain full clinical autonomy. They
+  apply evidence‑based protocols to your care and will always recommend in‑person services when
+  clinically indicated.
 </TextBlock>
 
 <Separator className="my-12" />
@@ -227,19 +239,19 @@ import { Separator } from '@/components/ui/separator';
       id: 'faq-3',
       question: 'What about mental health care after birth?',
       answer:
-        'Digital and telehealth psychological therapies (CBT, guided internet therapies) reduce perinatal depression symptoms in many studies and increase access. Research shows ~60% of RCTs reported significant improvements. Eleva Care offers immediate triage and evidence-based teletherapy options.',
+        'Digital and telehealth psychological therapies (CBT, guided internet therapies) reduce perinatal depression symptoms in many studies and increase access. Research shows ~60% of RCTs reported significant improvements. The platform facilitates access to immediate triage and evidence-based teletherapy options through independent experts.',
     },
     {
       id: 'faq-4',
       question: 'Are medication services safe by telemedicine?',
       answer:
-        'Large cohort studies show telemedicine medication services are highly effective and safe when implemented with appropriate screening and follow-up. Studies of ~52,000 patients found success rates ≥98% with very low serious adverse events. Eleva Care follows protocols proven in large studies.',
+        'Large cohort studies show telemedicine medication services are highly effective and safe when implemented with appropriate screening and follow-up. Studies of ~52,000 patients found success rates ≥98% with very low serious adverse events. Experts on the platform follow protocols proven in large studies.',
     },
     {
       id: 'faq-5',
       question: 'When should I see someone in person?',
       answer:
-        'In-person care is recommended for: acute physical signs requiring examination (heavy bleeding, severe pain, preeclampsia signs), procedures requiring hands-on care (IUD insertion, surgeries, some scans), and cases where remote assessment cannot safely rule out urgent pathology. Eleva Care always provides a clear pathway to immediate in-person care.',
+        'In-person care is recommended for: acute physical signs requiring examination (heavy bleeding, severe pain, preeclampsia signs), procedures requiring hands-on care (IUD insertion, surgeries, some scans), and cases where remote assessment cannot safely rule out urgent pathology. The platform provides clear pathways to immediate in-person care when needed.',
     },
   ]}
 />
