--- a/src/content/evidence-based-care/es.mdx
+++ b/src/content/evidence-based-care/es.mdx
@@ -27,7 +27,7 @@ import {
   badge="Excelencia Clínica"
   title="Atención basada en evidencia,"
   subtitle="probada por la ciencia"
-  description="Telesalud para la salud femenina: segura, efectiva, más rápida y más privada. Atención clínica confiable desde casa—probada en decenas de miles de pacientes y resumida en grandes revisiones sistemáticas."
+  description="Telesalud para la salud femenina: segura, efectiva, más rápida y más privada. Profesionales independientes y licenciados brindan atención a través de nuestra plataforma digital de salud—respaldada por decenas de miles de pacientes en investigaciones publicadas."
   ctaPrimary={{
     text: 'Reservar Consulta',
     href: '/experts',
@@ -38,9 +38,19 @@ import {
   }}
 />
 
+{/* Resumen Rápido para Consumidores */}
+<TextBlock className="bg-muted/50 rounded-xl p-6 mb-12">
+**Lo que esto significa para ti:**
+
+- **La telesalud funciona** — La investigación demuestra que las consultas por video son tan efectivas como las visitas presenciales para muchas necesidades de salud femenina.
+- **Estás en buenas manos** — Profesionales de la salud independientes y licenciados brindan tu atención; Eleva.care proporciona la plataforma segura.
+- **Tu seguridad es lo primero** — Los especialistas recomendarán atención presencial siempre que sea clínicamente necesario.
+- **Privacidad garantizada** — Todas las consultas ocurren en una plataforma encriptada y conforme con el RGPD.
+</TextBlock>
+
 <KeyNumbersSection
   title="Evidencia Clínica que Importa"
-  subtitle="Nuestro compromiso con la atención basada en evidencia está respaldado por investigación rigurosa y validado en entornos reales"
+  subtitle="La atención basada en evidencia está respaldada por investigación rigurosa y validada en entornos reales"
   stats={[
     {
       icon: 'award',
@@ -72,20 +82,16 @@ import {
 <HeadlineSection
   id="how-we-use-evidence"
   label="Nuestro Enfoque"
-  title="Cómo Eleva Care usa la medicina basada en evidencia"
-  description="Integramos la investigación más reciente en cada aspecto de la atención, asegurando que los servicios de telesalud sean seguros, efectivos y centrados en el paciente."
+  title="Cómo Eleva.care apoya la medicina basada en evidencia"
+  description="La plataforma facilita el acceso a servicios de telesalud alineados con guías clínicas internacionales e investigación revisada por pares. Los especialistas independientes mantienen plena autonomía clínica sobre la atención al paciente."
 />
 
 <TextBlock>
-  En Eleva Care, la medicina basada en evidencia no es solo una palabra de moda—es la base de todo
-  lo que hacemos. Cada servicio que ofrecemos está fundamentado en investigación revisada por pares
-  y guías clínicas.
+  En Eleva.care, creemos que toda mujer merece acceso a la mejor ciencia disponible. Por eso nuestra plataforma apoya prácticas basadas en evidencia alineadas con guías internacionales e investigación revisada por pares.
 </TextBlock>
 
 <TextBlock>
-  Monitoreamos continuamente la literatura científica más reciente para asegurar que nuestros
-  protocolos reflejen las mejores prácticas actuales. Nuestro equipo clínico revisa nueva evidencia
-  a medida que surge y actualiza nuestras vías de atención en consecuencia.
+  Los profesionales de la salud independientes y licenciados en Eleva.care mantienen plena autonomía clínica. Aplican protocolos basados en evidencia a tu atención y siempre recomendarán servicios presenciales cuando sea clínicamente indicado.
 </TextBlock>
 
 <Separator className="my-12" />
@@ -229,19 +235,19 @@ import {
       id: 'faq-3',
       question: '¿Qué pasa con la atención de salud mental después del parto?',
       answer:
-        'Las terapias psicológicas digitales y de telesalud (TCC, terapias guiadas por internet) reducen los síntomas de depresión perinatal en muchos estudios y aumentan el acceso. La investigación muestra que ~60% de los ECA reportaron mejoras significativas. Eleva Care ofrece triaje inmediato y opciones de teleterapia basadas en evidencia.',
+        'Las terapias psicológicas digitales y de telesalud (TCC, terapias guiadas por internet) reducen los síntomas de depresión perinatal en muchos estudios y aumentan el acceso. La investigación muestra que ~60% de los ECA reportaron mejoras significativas. La plataforma facilita el acceso a triaje inmediato y opciones de teleterapia basadas en evidencia a través de especialistas independientes.',
     },
     {
       id: 'faq-4',
       question: '¿Son seguros los servicios de medicamentos por telemedicina?',
       answer:
-        'Los estudios de cohortes grandes muestran que los servicios de medicamentos de telemedicina son altamente efectivos y seguros cuando se implementan con cribado y seguimiento apropiados. Estudios de ~52,000 pacientes encontraron tasas de éxito ≥98% con muy pocos eventos adversos graves. Eleva Care sigue protocolos probados en estudios grandes.',
+        'Los estudios de cohortes grandes muestran que los servicios de medicamentos de telemedicina son altamente efectivos y seguros cuando se implementan con cribado y seguimiento apropiados. Estudios de ~52,000 pacientes encontraron tasas de éxito ≥98% con muy pocos eventos adversos graves. Los especialistas en la plataforma siguen protocolos probados en estudios grandes.',
     },
     {
       id: 'faq-5',
       question: '¿Cuándo debo ver a alguien en persona?',
       answer:
-        'Se recomienda atención en persona para: signos físicos agudos que requieren examen (sangrado abundante, dolor severo, signos de preeclampsia), procedimientos que requieren atención práctica (inserción de DIU, cirugías, algunos escaneos), y casos donde la evaluación remota no puede descartar de manera segura patología urgente. Eleva Care siempre proporciona una vía clara hacia la atención en persona inmediata.',
+        'Se recomienda atención en persona para: signos físicos agudos que requieren examen (sangrado abundante, dolor severo, signos de preeclampsia), procedimientos que requieren atención práctica (inserción de DIU, cirugías, algunos escaneos), y casos donde la evaluación remota no puede descartar de manera segura patología urgente. La plataforma proporciona vías claras hacia la atención presencial inmediata cuando sea necesario.',
     },
   ]}
 />
