--- a/src/content/history/en.mdx
+++ b/src/content/history/en.mdx
@@ -93,7 +93,7 @@ That's when Rodrigo, my husband, brought all these pieces together and created t
 
 We want to build a bridge between cutting-edge science and the people who need it, but in a truly accessible way—world-class women's health care, available whenever and wherever it's needed.
 
-Our vision is simple: to make it possible for any woman to schedule an appointment with leading women's health specialists, adapting to her time and location—not the other way around.
+Our vision is simple: a secure digital platform that connects any woman with independent, licensed women's health specialists, adapting to her time and location—not the other way around.
 
 ## The Team I'm Proud Of
 
@@ -101,7 +101,7 @@ When I shared this idea with colleagues I admire, the response was warm and imme
 
 More than that, they're people I deeply care for, who have already contributed so much to what Eleva Care is today. Their generosity in sharing knowledge, experience, and vision has been essential to our growth.
 
-At the same time, we're building a clinical team of professionals I trust completely—people who share the same values and the same passion for evidence-based care.
+At the same time, we're growing a network of independent professionals I trust completely—people who share the same values and the same passion for evidence-based care.
 
 Eleva Care is taking its first steps, already offering online consultations. We're learning and growing every day. If you connect with this vision—whether as a professional who wants to collaborate or as someone seeking evidence-based care—our door is open. We want every woman who reaches out to us to know she'll receive guidance grounded in the best scientific evidence available and in the clinical experience of specialized professionals.
 
