--- a/src/content/history/es.mdx
+++ b/src/content/history/es.mdx
@@ -92,7 +92,7 @@ Entonces Rodrigo, mi marido, reunió todas esas piezas y creó la plataforma Ele
 
 Queremos construir un puente entre la ciencia más actual y las personas que la necesitan, pero de un modo realmente accesible: atención en salud femenina de clase mundial, disponible cuando y donde sea necesaria.
 
-Nuestra visión es sencilla: que cualquier mujer pueda concertar una cita con especialistas líderes en salud femenina, adaptándose a su horario y ubicación, y no al revés.
+Nuestra visión es sencilla: una plataforma digital segura que conecte a cualquier mujer con especialistas independientes y licenciados en salud femenina, adaptándose a su horario y ubicación, y no al revés.
 
 ## El Equipo que Me Enorgullece
 
@@ -100,7 +100,7 @@ Cuando compartí esta idea con colegas a quienes admiro, la respuesta fue inmedi
 
 Más allá de eso, son personas por las que tengo un enorme cariño y que ya han contribuido significativamente a lo que Eleva Care es hoy. Su generosidad al compartir conocimiento, experiencia y visión ha sido fundamental para nuestro crecimiento.
 
-Paralelamente, estamos formando un equipo clínico con profesionales en quienes confío plenamente, que comparten los mismos valores y la misma pasión por los cuidados basados en evidencia.
+Paralelamente, estamos formando una red de profesionales independientes en quienes confío plenamente, que comparten los mismos valores y la misma pasión por los cuidados basados en evidencia.
 
 Eleva Care está dando sus primeros pasos, ya con consultas online en marcha. Estamos aprendiendo y creciendo cada día. Si te identificas con esta visión—como profesional que quiere colaborar o como persona que busca cuidados basados en evidencia—nuestra puerta está abierta. Queremos que cada mujer que nos contacte sepa que recibirá orientación fundamentada en la mejor evidencia científica disponible y en la experiencia clínica de profesionales especializados.
 
