--- a/src/content/history/pt-BR.mdx
+++ b/src/content/history/pt-BR.mdx
@@ -90,7 +90,7 @@ Foi então que o Rodrigo, meu marido, juntou todas essas peças e criou a plataf
 
 Queremos construir uma ponte entre a ciência mais atual e as pessoas que precisam dela, mas de forma verdadeiramente acessível—cuidados em saúde da mulher de nível mundial, disponíveis quando e onde forem necessários.
 
-Nossa visão é simples: permitir que qualquer mulher possa agendar uma consulta com especialistas líderes em saúde feminina, de acordo com seu horário e sua localização—não o contrário.
+Nossa visão é simples: uma plataforma digital segura que conecte qualquer mulher a especialistas independentes e licenciados em saúde feminina, de acordo com seu horário e sua localização—não o contrário.
 
 ## A Equipe que Me Enche de Orgulho
 
@@ -98,7 +98,7 @@ Quando compartilhei essa ideia com colegas que admiro, a resposta foi imediata e
 
 Mais que isso, são pessoas por quem tenho um carinho enorme e que já contribuíram significativamente para o que a Eleva Care é hoje. A generosidade deles em compartilhar conhecimento, experiência e visão tem sido essencial para o nosso crescimento.
 
-Ao mesmo tempo, estamos formando uma equipe clínica com profissionais em quem confio profundamente, que compartilham os mesmos valores e a mesma paixão por cuidados baseados em evidências.
+Ao mesmo tempo, estamos desenvolvendo uma rede de profissionais independentes em quem confio profundamente, que compartilham os mesmos valores e a mesma paixão por cuidados baseados em evidências.
 
 A Eleva Care está dando seus primeiros passos, já com consultas online em andamento. Estamos aprendendo e crescendo a cada dia. Se você se identifica com essa visão—como profissional que deseja colaborar ou como pessoa que busca cuidados baseados em evidência—a porta está aberta. Queremos que cada mulher que nos procure saiba que receberá orientações fundamentadas na melhor evidência científica disponível e na experiência clínica de profissionais especializados.
 
