--- a/src/content/payment-policies/en.mdx
+++ b/src/content/payment-policies/en.mdx
@@ -1,16 +1,28 @@
 export const metadata = {
-  "title": "Payment Policies | Eleva Care",
-  "description": "Understand Eleva Care's payment terms, refund policies, and billing procedures for healthcare services.",
-  "og": {
-    "title": "Payment Policies | Eleva Care",
-    "description": "Understand Eleva Care's payment terms, refund policies, and billing procedures for healthcare services.",
-    "siteName": "Eleva Care"
-  }
+  title: 'Payment Policies | Eleva Care',
+  description:
+    "Understand Eleva Care's payment terms, refund policies, and billing procedures for healthcare services.",
+  og: {
+    title: 'Payment Policies | Eleva Care',
+    description:
+      "Understand Eleva Care's payment terms, refund policies, and billing procedures for healthcare services.",
+    siteName: 'Eleva Care',
+  },
 };
 
 # Payment Policies
 
 _Effective Date: June 3, 2025_
+
+> **Quick Summary**
+>
+> - **What this page is about:** How payments and refunds work on Eleva.care.
+> - **Eleva.care is a digital health platform; you pay for services delivered by independent experts.**
+> - **Pricing is transparent:** Expert receives 85%, platform fee 15%—no hidden fees.
+> - **Accepted methods:** Cards (Visa, Mastercard, Amex) and Multibanco (Portugal).
+> - **Refunds for conflicts:** 100% full refund if a booking can't proceed due to availability issues.
+> - **Payment security:** Processed by Stripe (PCI DSS compliant); we never store your card details.
+> - **Questions?** Contact `support@eleva.care`.
 
 This page explains how payments work on Eleva.care in plain language.
 
