--- a/src/content/payment-policies/es.mdx
+++ b/src/content/payment-policies/es.mdx
@@ -12,6 +12,15 @@ export const metadata = {
 
 _Fecha de vigencia: 3 de junio de 2025_
 
+> **Resumen Rápido**
+>
+> - **De qué trata esta página:** Cómo funcionan los pagos, reembolsos y facturación en Eleva.care.
+> - **Eleva.care opera la plataforma digital de salud; especialistas independientes y licenciados prestan su atención.**
+> - **Precio incluido:** el precio mostrado incluye todo—85% va al especialista, 15% tarifa de plataforma.
+> - **Métodos de pago:** tarjeta de crédito/débito (instantáneo) o Multibanco (solo Portugal, plazo de 7 días).
+> - **Reembolsos:** 100% de reembolso para conflictos de agenda; solicite dentro de 7 días.
+> - **¿Preguntas?** Contacte `support@eleva.care`.
+
 Aquí explicamos cómo funcionan los pagos en Eleva.care en lenguaje claro.
 
 ## 1) Qué está pagando
