--- a/src/content/payment-policies/pt-BR.mdx
+++ b/src/content/payment-policies/pt-BR.mdx
@@ -12,6 +12,15 @@ export const metadata = {
 
 _Data de vigência: 3 de junho de 2025_
 
+> **Resumo Rápido**
+>
+> - **Sobre o que é esta página:** Como funcionam os pagamentos, reembolsos e faturamento na Eleva.care.
+> - **A Eleva.care opera a plataforma digital de saúde; especialistas independentes e licenciados prestam seus cuidados.**
+> - **Preço incluído:** o preço exibido inclui tudo—85% vai para o especialista, 15% taxa de plataforma.
+> - **Métodos de pagamento:** cartão de crédito/débito (instantâneo) ou Multibanco (só Portugal, prazo de 7 dias).
+> - **Reembolsos:** 100% de reembolso para conflitos de agenda; solicite em até 7 dias.
+> - **Dúvidas?** Entre em contato com `support@eleva.care`.
+
 Aqui explicamos como funcionam os pagamentos na Eleva.care de forma simples.
 
 ## 1) Pelo que você está pagando
