--- a/src/content/privacy/en.mdx
+++ b/src/content/privacy/en.mdx
@@ -12,6 +12,15 @@ export const metadata = {
 
 _Effective Date: April 16, 2025_
 
+> **Quick Summary**
+>
+> - **What this page is about:** What data we collect, why, and how we protect it.
+> - **Eleva.care operates the digital health platform; independent, licensed experts deliver your care.**
+> - **We collect only what's needed:** account info, booking data, usage data—no card numbers (Stripe handles payments).
+> - **You control your data:** request access, correction, deletion, or data portability anytime.
+> - **Your data is stored in the EU** and protected by encryption and strict access controls.
+> - **Questions?** Contact `privacy@eleva.care` or `dpo@eleva.care`.
+
 We respect your privacy and keep things simple. This page explains what we collect, why, how we protect it, and your choices.
 
 ## 1) Who we are and our role
