--- a/src/content/privacy/es.mdx
+++ b/src/content/privacy/es.mdx
@@ -12,6 +12,15 @@ export const metadata = {
 
 _Fecha de vigencia: 16 de abril de 2025_
 
+> **Resumen Rápido**
+>
+> - **De qué trata esta página:** Qué datos recopilamos, por qué y cómo los protegemos.
+> - **Eleva.care opera la plataforma digital de salud; especialistas independientes y licenciados prestan su atención.**
+> - **Solo recopilamos lo necesario:** datos de cuenta, reservas, uso—no guardamos números de tarjetas (Stripe procesa los pagos).
+> - **Usted controla sus datos:** puede solicitar acceso, corrección, eliminación o portabilidad en cualquier momento.
+> - **Sus datos se almacenan en la UE** y están protegidos por cifrado y controles de acceso estrictos.
+> - **¿Preguntas?** Contacte `privacy@eleva.care` o `dpo@eleva.care`.
+
 Respetamos su privacidad y lo explicamos de forma simple. Qué recopilamos, por qué, cómo lo protegemos y sus opciones.
 
 ## 1) Quiénes somos y nuestro rol
