--- a/src/content/privacy/pt-BR.mdx
+++ b/src/content/privacy/pt-BR.mdx
@@ -12,6 +12,15 @@ export const metadata = {
 
 _Data de vigência: 16 de abril de 2025_
 
+> **Resumo Rápido**
+>
+> - **Sobre o que é esta página:** Que dados coletamos, por quê e como os protegemos.
+> - **A Eleva.care opera a plataforma digital de saúde; especialistas independentes e licenciados prestam seus cuidados.**
+> - **Coletamos apenas o necessário:** dados de conta, agendamentos, uso—não armazenamos números de cartões (a Stripe processa os pagamentos).
+> - **Você controla seus dados:** pode solicitar acesso, retificação, exclusão ou portabilidade a qualquer momento.
+> - **Seus dados ficam na UE** e estão protegidos por criptografia e controles de acesso rigorosos.
+> - **Dúvidas?** Entre em contato com `privacy@eleva.care` ou `dpo@eleva.care`.
+
 Respeitamos sua privacidade. Explicamos de forma simples o que coletamos, por quê, como protegemos e suas opções.
 
 ## 1) Quem somos e nosso papel
