--- a/src/content/privacy/pt.mdx
+++ b/src/content/privacy/pt.mdx
@@ -12,6 +12,15 @@ export const metadata = {
 
 _Data de vigência: 16 de abril de 2025_
 
+> **Resumo Rápido**
+>
+> - **Sobre o que é esta página:** Que dados recolhemos, porquê e como os protegemos.
+> - **A Eleva.care opera a plataforma digital de saúde; especialistas independentes e licenciados prestam os seus cuidados.**
+> - **Recolhemos apenas o necessário:** dados de conta, marcações, utilização—não guardamos números de cartões (o Stripe processa os pagamentos).
+> - **Controla os seus dados:** pode solicitar acesso, retificação, apagamento ou portabilidade a qualquer momento.
+> - **Os seus dados ficam na UE** e estão protegidos por encriptação e controlos de acesso rigorosos.
+> - **Questões?** Contacte `privacy@eleva.care` ou `dpo@eleva.care`.
+
 Respeitamos a sua privacidade. Explicamos de forma simples o que recolhemos, porquê, como protegemos e as suas escolhas.
 
 ## 1) Quem somos e o nosso papel
