--- a/src/content/trust/dpa/en.mdx
+++ b/src/content/trust/dpa/en.mdx
@@ -12,6 +12,15 @@ export const metadata = {
 
 _Effective Date: April 16, 2025_
 
+> **Quick Summary**
+>
+> - **What this page is about:** How Eleva.care processes personal data on behalf of users and experts.
+> - **Eleva.care operates the digital health platform; independent, licensed experts provide clinical care.**
+> - **For platform data** (accounts, bookings, payments): Eleva.care is the Data Controller.
+> - **For clinical notes/files** created by experts: the expert is the Controller; Eleva.care stores them securely.
+> - **Your data stays in the EU** by default, protected by encryption and strict access controls.
+> - **Questions?** Contact `dpo@eleva.care`.
+
 This DPA explains how Eleva.care handles personal data—clearly and simply.
 
 Eleva.care is a digital health platform that enables the provision of remote healthcare services by independent professionals. Eleva.care does not deliver clinical care. Eleva.care's regulatory status under applicable Portuguese and EU health regulations (e.g., registration as a telemedicine platform) is distinct from its GDPR data protection roles, and Eleva.care will comply with applicable health regulations.
