--- a/src/content/trust/dpa/es.mdx
+++ b/src/content/trust/dpa/es.mdx
@@ -12,6 +12,15 @@ export const metadata = {
 
 _Fecha de vigencia: 16 de abril de 2025_
 
+> **Resumen Rápido**
+>
+> - **De qué trata esta página:** Cómo Eleva.care procesa datos personales en nombre de usuarios y especialistas.
+> - **Eleva.care opera la plataforma digital de salud; especialistas independientes y licenciados prestan la atención clínica.**
+> - **Para datos de plataforma** (cuentas, reservas, pagos): Eleva.care es el Responsable del Tratamiento.
+> - **Para notas/archivos clínicos** creados por especialistas: el especialista es el Responsable; Eleva.care los almacena de forma segura.
+> - **Sus datos permanecen en la UE** por defecto, protegidos por cifrado y controles de acceso estrictos.
+> - **¿Preguntas?** Contacte `dpo@eleva.care`.
+
 Este DPA explica cómo Eleva.care trata los datos personales—de forma clara y simple.
 
 Eleva.care es una plataforma digital de salud que permite la prestación de servicios de salud remotos por profesionales independientes. Eleva.care no presta atención clínica. El estatus regulatorio de Eleva.care conforme a la legislación portuguesa y de la Unión Europea en materia de salud (por ej., registro como plataforma de telemedicina) es distinto de sus roles de protección de datos conforme al RGPD, y Eleva.care cumplirá con la legislación sanitaria aplicable.
