--- a/src/content/trust/dpa/pt-BR.mdx
+++ b/src/content/trust/dpa/pt-BR.mdx
@@ -12,6 +12,15 @@ export const metadata = {
 
 _Data de vigência: 16 de abril de 2025_
 
+> **Resumo Rápido**
+>
+> - **Sobre o que é esta página:** Como a Eleva.care processa dados pessoais em nome de usuários e especialistas.
+> - **A Eleva.care opera a plataforma digital de saúde; especialistas independentes e licenciados prestam os cuidados clínicos.**
+> - **Para dados de plataforma** (contas, agendamentos, pagamentos): a Eleva.care é o Controlador de Dados.
+> - **Para notas/arquivos clínicos** criados por especialistas: o especialista é o Controlador; a Eleva.care os armazena com segurança.
+> - **Seus dados permanecem na UE** por padrão, protegidos por criptografia e controles de acesso rigorosos.
+> - **Dúvidas?** Entre em contato com `dpo@eleva.care`.
+
 Este DPA explica como a Eleva.care trata dados pessoais—de forma clara e simples.
 
 A Eleva.care é uma plataforma digital de saúde que permite a prestação de serviços de saúde remotos por profissionais independentes. A Eleva.care não presta cuidados clínicos. O status regulatório da Eleva.care conforme a legislação portuguesa e da União Europeia em matéria de saúde (por ex., registro como plataforma de telemedicina) é distinto de seus papéis de proteção de dados conforme o GDPR, e a Eleva.care cumprirá a legislação de saúde aplicável.
