--- a/src/content/trust/dpa/pt.mdx
+++ b/src/content/trust/dpa/pt.mdx
@@ -14,6 +14,15 @@ export const metadata = {
 
 _Data de vigência: 16 de abril de 2025_
 
+> **Resumo Rápido**
+>
+> - **Sobre o que é esta página:** Como a Eleva.care processa dados pessoais em nome de utilizadores e especialistas.
+> - **A Eleva.care opera a plataforma digital de saúde; especialistas independentes e licenciados prestam os cuidados clínicos.**
+> - **Para dados de plataforma** (contas, marcações, pagamentos): a Eleva.care é o Responsável pelo Tratamento.
+> - **Para notas/ficheiros clínicos** criados por especialistas: o especialista é o Responsável; a Eleva.care armazena‑os em segurança.
+> - **Os seus dados permanecem na UE** por padrão, protegidos por encriptação e controlos de acesso rigorosos.
+> - **Questões?** Contacte `dpo@eleva.care`.
+
 Este DPA explica como a Eleva.care trata dados pessoais—de forma clara e simples.
 
 A Eleva.care é uma plataforma digital de saúde que permite a prestação de serviços de saúde remotos por profissionais independentes. A Eleva.care não presta cuidados clínicos. O estatuto regulamentar da Eleva.care ao abrigo da legislação portuguesa e da União Europeia em matéria de saúde (por ex., registo como plataforma de telemedicina) é distinto dos seus papéis de proteção de dados ao abrigo do RGPD, e a Eleva.care cumprirá a legislação de saúde aplicável.
