--- a/src/content/trust/security/en.mdx
+++ b/src/content/trust/security/en.mdx
@@ -12,6 +12,14 @@ export const metadata = {
 
 _Last updated: October 1, 2025_
 
+> **Quick Summary**
+>
+> - **What this page is about:** How Eleva.care protects your data on our digital health platform.
+> - **Eleva.care runs the technology platform; independent, licensed experts provide your healthcare.**
+> - **Your data is encrypted** (AES‑256 at rest, TLS 1.3 in transit) and stored in the EU by default.
+> - **We follow GDPR, LGPD, and maintain HIPAA‑ready infrastructure** with vetted vendors.
+> - **Questions?** Contact `security@eleva.care` or `dpo@eleva.care`.
+
 We take security seriously. Below is a clear, concise overview of how we protect your data and run a secure digital health platform.
 
 ## 1) Compliance at the core
