--- a/src/content/trust/security/es.mdx
+++ b/src/content/trust/security/es.mdx
@@ -12,6 +12,14 @@ export const metadata = {
 
 _Última actualización: 1 de octubre de 2025_
 
+> **Resumen Rápido**
+>
+> - **De qué trata esta página:** Cómo Eleva.care protege sus datos en nuestra plataforma digital de salud.
+> - **Eleva.care opera la plataforma tecnológica; especialistas independientes y licenciados prestan su atención sanitaria.**
+> - **Sus datos están cifrados** (AES‑256 en reposo, TLS 1.3 en tránsito) y almacenados en la UE por defecto.
+> - **Cumplimos con RGPD, LGPD y mantenemos infraestructura preparada para HIPAA** con proveedores verificados.
+> - **¿Preguntas?** Contacte `security@eleva.care` o `dpo@eleva.care`.
+
 Tomamos la seguridad en serio. A continuación, un resumen claro y directo de cómo protegemos sus datos y operamos una plataforma digital de salud segura.
 
 ## 1) Cumplimiento como base
