--- a/src/content/trust/security/pt-BR.mdx
+++ b/src/content/trust/security/pt-BR.mdx
@@ -12,6 +12,14 @@ export const metadata = {
 
 _Última atualização: 1 de outubro de 2025_
 
+> **Resumo Rápido**
+>
+> - **Sobre o que é esta página:** Como a Eleva.care protege seus dados na nossa plataforma digital de saúde.
+> - **A Eleva.care opera a plataforma tecnológica; especialistas independentes e licenciados prestam seus cuidados de saúde.**
+> - **Seus dados estão criptografados** (AES‑256 em repouso, TLS 1.3 em trânsito) e armazenados na UE por padrão.
+> - **Cumprimos GDPR, LGPD e mantemos infraestrutura preparada para HIPAA** com fornecedores verificados.
+> - **Dúvidas?** Entre em contato com `security@eleva.care` ou `dpo@eleva.care`.
+
 Levamos a segurança a sério. Abaixo está um resumo claro e objetivo de como protegemos seus dados e operamos uma plataforma digital de saúde segura.
 
 ## 1) Conformidade como base
