--- a/src/content/trust/security/pt.mdx
+++ b/src/content/trust/security/pt.mdx
@@ -12,6 +12,14 @@ export const metadata = {
 
 _Última atualização: 1 de outubro de 2025_
 
+> **Resumo Rápido**
+>
+> - **Sobre o que é esta página:** Como a Eleva.care protege os seus dados na nossa plataforma digital de saúde.
+> - **A Eleva.care opera a plataforma tecnológica; especialistas independentes e licenciados prestam os seus cuidados de saúde.**
+> - **Os seus dados estão encriptados** (AES‑256 em repouso, TLS 1.3 em trânsito) e armazenados na UE por padrão.
+> - **Cumprimos o RGPD, LGPD e mantemos infraestrutura preparada para HIPAA** com fornecedores verificados.
+> - **Questões?** Contacte `security@eleva.care` ou `dpo@eleva.care`.
+
 Levamos a segurança a sério. Abaixo segue um resumo claro e direto de como protegemos os seus dados e operamos uma plataforma digital de saúde segura.
 
 ## 1) Conformidade como base
