--- a/src/content/history/pt.mdx
+++ b/src/content/history/pt.mdx
@@ -88,7 +88,7 @@ Foi então que o Rodrigo, o meu marido, juntou todas estas peças e criou a plat
 
 Queremos construir uma ponte entre a ciência mais atual e as pessoas que precisam dela, mas de uma forma verdadeiramente acessível - cuidados de saúde da mulher de classe mundial, disponíveis quando e onde forem necessários.
 
-A nossa visão é simples: permitir que qualquer mulher possa marcar consulta com especialistas líderes em saúde feminina, adaptando-se ao seu horário e localização, não o contrário.
+A nossa visão é simples: uma plataforma digital segura que liga qualquer mulher a especialistas independentes e licenciados em saúde feminina, adaptando-se ao seu horário e localização, não o contrário.
 
 ## A Equipa que Me Orgulha
 
@@ -96,7 +96,7 @@ Quando falei desta ideia com colegas que admiro, a resposta foi calorosa e imedi
 
 Mais do que isso, são seres humanos por quem tenho um carinho imenso e que já contribuíram significativamente para o que a Eleva Care é hoje. A sua generosidade em partilhar conhecimento, experiência e visão tem sido fundamental para o nosso crescimento.
 
-Paralelamente, estamos a construir uma equipa clínica composta por profissionais em quem confio profundamente, que partilham os mesmos valores e a mesma paixão por cuidados baseados em evidência.
+Paralelamente, estamos a desenvolver uma rede de profissionais independentes em quem confio profundamente, que partilham os mesmos valores e a mesma paixão por cuidados baseados em evidência.
 
 A Eleva Care está a dar os primeiros passos, já com consultas online a decorrer. Estamos a aprender e a crescer todos os dias. Se te identificas com esta visão - seja como profissional que quer colaborar ou como pessoa que procura cuidados baseados em evidência - a porta está aberta. Queremos que cada mulher que nos contacte saiba que receberá orientações fundamentadas na melhor evidência científica disponível e na experiência clínica de profissionais especializados.
 
